--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -117,6 +117,8 @@
    "source": [
     "train_resp = np.log(train_df['Sales'].copy())\n",
     "train_df = train_df.drop('Sales', axis=1)\n",
+    "\n",
+    "# We drop the 'Customers' from train_df and 'Id' from test_df as they're not present in the other dataframe\n",
     "train_df = train_df.drop('Customers', axis=1)\n",
     "test_df = test_df.drop('Id', axis=1)"
    ]
@@ -636,6 +638,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.1 Use Grid-search without cross-validation\n",
     "We use `ParameterGrid` here to construct the entire grid for us! We put the output in a list of dictionaries and then save it in a dataframe. We might want to persist such dataframes to disk."
    ]
   },
@@ -664,7 +667,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Use Grid-search without cross-validation\n",
     "\n",
     "Use the Gradient Boosting Regressor method **(n_estimators = 200)** to fit on your training data. Calculate the mean squared error for both the validation **('mse')** and the training set **('msetr')** for each combination of parameters in the `param_grid` and store the results along with the parameters in a list **'ds'**. [sklearn documentation link](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.GradientBoostingRegressor.html)"
    ]
@@ -772,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +791,7 @@
     "    plt.plot(pd.to_datetime(all_data_store_1['Date']),all_data_store_1['Actual'])\n",
     "    plt.title('Forecast')\n",
     "    plt.ylabel('Log Sales')\n",
-    "    plt.legend()\n",
+    "    plt.legend(['forecast', 'actual'], loc='best')\n",
     "    plt.show()    "
    ]
   },
@@ -802,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
