--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -57,6 +57,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 Load , check and clean the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -69,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We engage in some cleaning. A lot of cleaning of this dataset has already been done for us. Some features have been created. In particular we moved from dates to week-of-year, day-of week, etc. For example the 49th and 50th weeks of the year may have higher sales!"
+    "We load the data from the 'data' folder and engage in some cleaning. A lot of cleaning of this dataset has already been done for us. Some features have been created. In particular we moved from dates to week-of-year, day-of week, etc. For example the 49th and 50th weeks of the year may have higher sales!"
    ]
   },
   {
@@ -96,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We log-transform the dependent variable because it is long-tailed. Plot a histogram of Sales to see this"
+    "Plot a histogram of Sales. What do you see?"
    ]
   },
   {
@@ -107,6 +114,13 @@
    "source": [
     "# your code here\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We log-transform the dependent variable because it is long-tailed, i.e., the distribution has many occurrences far from the 'central' part of the distribution"
    ]
   },
   {
@@ -127,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets get some idea about our dataset."
+    "Lets get some idea about our dataset - what are the different variables used? How do their values look like?"
    ]
   },
   {
@@ -177,9 +191,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Types of variables and cardinality\n",
+    "### 1.2 Types of variables and cardinality\n",
     "\n",
-    "We make a note of which variables are categorical and which are not. This is a choice. If cardinality(unique elements in a variable) is not too high, binning or categorizing can be beneficial. Often this will be true for integer valued variables."
+    "We make a note of which variables are categorical and which are not. This is a choice. If cardinality(unique elements in a variable) is not too high, binning or categorizing can be beneficial. Often this will be true for integer valued variables.\n",
+    ">**Binning** is a way to group a number of more or less continuous values into a smaller number of \"bins\" or \"categories\""
    ]
   },
   {
@@ -269,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Look at the train & test data and answer why we shouldn't have a random test-train split in this case like always"
+    "#### Look at the train & test data and answer why we shouldn't have a random test-train split in this case"
    ]
   },
   {
@@ -337,7 +352,7 @@
     "1. Pipelines enforce implementation and desired order of steps in your project, which in turn helps in reproducibility and creating a convenient work-flow.\n",
     "2. They also prevent data leakage in your validation set during cross-validation by ensuring that data preparation like standardization is constrained to each fold of your cross validation procedure.\n",
     "\n",
-    "Ok, now we'll use the new `ColumnTransformer`, with imputation, missing-data indicators, the new `OrdinalEncoder`, and the usual `StandardScaler`"
+    "Ok, now we'll use the new `ColumnTransformer` with imputation, missing-data indicators, the new `OrdinalEncoder`, and the usual `StandardScaler`"
    ]
   },
   {
@@ -778,17 +793,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def forecast_plot(model, store):\n",
+    "def forecast_plot(model, store, Xtrain, Xvalid):\n",
     "    trdf['forecast'] = model.predict(Xtrain)\n",
     "    vadf['forecast'] = model.predict(Xvalid)\n",
     "    train_df = pd.concat([vadf,trdf])\n",
     "    train_df['Actual'] = train_resp\n",
     "    all_data = pd.concat([test_df, train_df])\n",
-    "    all_data_store_1 = all_data[all_data['Store']==store]\n",
     "    \n",
     "    plt.figure(figsize=(20,8))\n",
-    "    plt.plot(pd.to_datetime(all_data_store_1['Date']),all_data_store_1['forecast'])\n",
-    "    plt.plot(pd.to_datetime(all_data_store_1['Date']),all_data_store_1['Actual'])\n",
+    "    plt.plot(pd.to_datetime(all_data[all_data['Store']==store]['Date']),all_data[all_data['Store']==store]['forecast'])\n",
+    "    plt.plot(pd.to_datetime(all_data[all_data['Store']==store]['Date']),all_data[all_data['Store']==store]['Actual'])\n",
     "    plt.title('Forecast')\n",
     "    plt.ylabel('Log Sales')\n",
     "    plt.legend(['forecast', 'actual'], loc='best')\n",
@@ -993,6 +1007,38 @@
    "metadata": {},
    "source": [
     "How does the Categorical Embedding model perform as opposed to the GBRT model?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We predict the forecasts on the test data-set and then compare the actuals vs forecast for the entire data (train+test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the actuals vs forecasts on the entire data-set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here\n"
    ]
   }
  ],
