--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -193,7 +193,7 @@
    "source": [
     "### 1.2 Types of variables and cardinality\n",
     "\n",
-    "We make a note of which variables are categorical and which are not. This is a choice. If cardinality(unique elements in a variable) is not too high, binning or categorizing can be beneficial. Often this will be true for integer valued variables.\n",
+    "We make a note of which variables are categorical and which are not. This is a choice. If cardinality (unique elements in a variable) is not too high, binning or categorizing can be beneficial. Often this will be true for integer valued variables.\n",
     ">**Binning** is a way to group a number of more or less continuous values into a smaller number of \"bins\" or \"categories\""
    ]
   },
@@ -852,7 +852,15 @@
     "\n",
     "![](./images/embmlp.png)\n",
     "\n",
-    "Here we divide the cardinality by 2 and add 1 to get the no. of embedding features (this is a heuristic). If the cardinality is high, we clamp the size of the latent space down at 50."
+    "A good heuristic to choose the no. of embedding features ('lower-width features') is to divide the cardinality by 2 and then add 1. If the cardinality is very high, we clamp the size of the embedding features down at 50.\n",
+    "\n",
+    "Here's an **example** to help explain this better:\n",
+    "\n",
+    "Suppose we want to use the day of the week as a feature in our neural net. We create a a 7x4 (7 for the no. of days in a week and 4 seems to be a good choice going by the heuristic mentioned above) matrix mapping a day of the week to each row. We then replace a specific day of the week with its corresponding vector.\n",
+    "\n",
+    "![](./images/embmlp2.png)\n",
+    "\n",
+    "As opposed to one hot encoding, where a day of the week can only ever be a single value, embeddings transform the day of the week into a 4-dimensional concept. After training our model, we may discover that this table contains semantic meaning. For example, Saturday and Sunday could be more closely related than say Saturday and Wednesday."
    ]
   },
   {
