Updating hw3 final

--- a/hw3_final.ipynb
+++ b/hw3_final.ipynb
@@ -12,6 +12,8 @@
     "\n",
     "You will need to look at various factors influencing the forecast predictions - the primary ones being promotions, competition, school and state holidays, seasonality, and locality.\n",
     "\n",
+    "The train data provided here has information around sales of 1115 stores from Jan 1, 2013 to July 31, 2015, while the test data has information for 48 days from Aug 1, 2015 to Sep 17, 2015.\n",
+    "\n",
     "\n",
     "While working through this homework, you will:\n",
     "\n",
@@ -208,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's have a look at the one of the variables - `DayofWeek`. There are 7 possible values this column can take and hence, it's cardinality is 7."
+    "Let's have a look at the one of the variables - `DayofWeek`. There are 7 possible values this column can take and hence, we say that it's cardinality is 7."
    ]
   },
   {
