--- a/hw3_final.ipynb
+++ b/hw3_final.ipynb
@@ -196,13 +196,8 @@
     "### 1.2 Types of variables and cardinality\n",
     "\n",
     "We make a note of which variables are categorical and which are not. This is a choice. If cardinality (unique elements in a variable) is not too high, binning or categorizing can be beneficial. Often this will be true for integer valued variables.\n",
-    ">**Binning** is a way to group a number of more or less continuous values into a smaller number of \"bins\" or \"categories\"\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    ">**Binning** is a way to group a number of more or less continuous values into a smaller number of \"bins\" or \"categories\"\n",
+    "\n",
     "Here is a [video](https://www.youtube.com/results?search_query=binning) that seems to explain binning"
    ]
   },
@@ -817,7 +812,7 @@
    "metadata": {},
    "source": [
     "### 2.3 Predict on test data-set\n",
-    "The test data needs to match our construction, the same way we did for train & validation\n"
+    "Use the Column transformer defined earlier to transform the test dataset and get it in the correct format. Follow the same process that we did for Xtrain and Xvalid. Store the result in Xtest.\n"
    ]
   },
   {
@@ -827,6 +822,22 @@
    "outputs": [],
    "source": [
     "# your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The test data needs to match our construction, so that it can be input to the NN model. Store the categorical variables in a list `list_cat_test` and the continuous variables in the array `cont_test`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here"
    ]
   },
   {
