--- a/hw3_final.ipynb
+++ b/hw3_final.ipynb
@@ -837,14 +837,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predict the sales on the test data-set (**test_df**) and store the result in a new column **forecast_em**"
+    "Predict the sales on the test data-set (**test_df**) and store the result in a new column **forecast_test**"
    ]
   },
   {
@@ -878,11 +878,12 @@
     "    \n",
     "    plt.figure(figsize=(20,8))\n",
     "    plt.plot(pd.to_datetime(all_data[all_data['Store']==store]['Date']),all_data[all_data['Store']==store]['forecast'])\n",
+    "    plt.plot(pd.to_datetime(all_data[all_data['Store']==store]['Date']),all_data[all_data['Store']==store]['forecast_test'])\n",
     "    plt.plot(pd.to_datetime(all_data[all_data['Store']==store]['Date']),all_data[all_data['Store']==store]['Actual'])\n",
     "    plt.title('Forecast')\n",
     "    plt.ylabel('Log Sales')\n",
-    "    plt.legend(['forecast', 'actual'], loc='best')\n",
-    "    plt.show()    "
+    "    plt.legend(['forecast', 'forecast_test', 'actual'], loc='best')\n",
+    "    plt.show()"
    ]
   },
   {
